`Added CRUD FoodController API routes and documentation`
