# app/Models/Food.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Support\Str;
+
+class Food extends Model
+{
+    use HasFactory;
+    public $incrementing = false;
+    protected $keyType = 'string';
+    protected $table = 'foods';
+    protected $fillable = [
+        'name',
+        'description',
+        'price',
+        'category',
+        'is_active'
+    ];
+
+    protected static function boot()
+    {
+        parent::boot();
+        static::creating(function ($model) {
+            if (empty($model->{$model->getKeyName()})) {
+                $model->{$model->getKeyName()} = (string) Str::uuid();
+            }
+        });
+    }
+}
